# watcher-dsl-beta

./: .gitignore  LICENSE  README.md  ubuntu-demo-tutorial.sh  ubuntu-install.sh
data/example/: ERC20TOT.watcher
data/examples/: index.ts
data/examples2/: ERC20DSL.json  ERC20DSL.watcher
exampleWatchers/: ERC20HoldersWatcher.watcher  ERC20ScammerRatioWatcher.watcher   ERC20TotalSupplyWatcher.watcher  README.md  UniswapV2PairAnalyticsWatcher.watcher  UniswapV2PairPriceWatcher.watcher  examples.md
src/haskell/: haskell.cabal
src/haskell/app/: Main.hs  NodeRunner.hs  ParseNode.hs
src/haskell/lib/Dsl/: ConfigGenerator.hs  Main.hs  NodeRunner.hs  ParseNode.hs  ParserDefinition.hs
src/node/: class.ts  estree.ts  index.ts  package-lock.json  package.json  parseDir.js  parseToTs.js  parser.js  replace.js  tsconfig.json
