cabal-version:      2.4
name:               haskell
version:            0.1.0.0


author:             PawelWP
maintainer:         pawelwolak13@gmail.com

-- A copyright notice.
-- copyright:
-- category:


common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      aeson ^>=2.0.3,
      base >=4.14 && <5,
      bytestring >=0.10.2 && <0.12,
      process >= 1.6.16.0,
      text >= 1.2.5.0

extra-source-files: CHANGELOG.md

library
  import: shared-opts
  hs-source-dirs: lib
  exposed-modules: 
       Dsl.Main
     , Dsl.NodeRunner
     , Dsl.ParseNode
     
     
executable haskell
    import: shared-opts
    build-depends:    aeson ^>=2.0.3,
                      haskell,
                      base >=4.14 && <5,
                      bytestring >=0.10.2 && <0.12,
                      process >= 1.6.16.0,
                      text >= 1.2.5.0,
    hs-source-dirs:   app
    main-is:          Main.hs
    default-language: Haskell2010

